[package]
name = "honest"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "High-assurance Operations for Number-theoretic Extension Sets and Theorems (Galois Fields)."

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/honest"

[dependencies]
creusot-contracts = { version = "0.4.0" }
zeroize = { version = "1.8.1", features = ["derive"] }
