[package]
name = "honest"
version = "0.1.2"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "High-assurance Operations for Number-theoretic Extension Sets and Theorems (Galois Fields)."

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/honest"

[dependencies]
zeroize = { version = "1.8.1", features = ["derive"] }
num-bigint = { version = "0.4.6", features = ["rand"] }
secrecy = "0.10.3"
num-traits = "0.2.19"
num-integer = "0.1.46"
thiserror = "2.0.12"


classified = { version = "0.1.1", default-features = false }